--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,11 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+#production:
+  #<<: *default
+ #database: db/production.sqlite3
+
 production:
-  <<: *default
-  database: db/production.sqlite3
+	url: <%= ENV['DATABASE_URL'] %>
+	#e.g postgres://user:pass@host:123
+
